# armature-cabinet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NEXT-STEPS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/blog-writer/: README.md  brakes.md  cabinet.yaml  mandate.md  soul.md  trust.yaml
agents/gmail-reader/: README.md  brakes.md  cabinet.yaml  mandate.md  soul.md  trust.yaml
agents/marketing-debater/: README.md  brakes.md  cabinet.yaml  mandate.md  soul.md  trust.yaml
agents/marketing-ideator/: README.md  brakes.md  cabinet.yaml  mandate.md  soul.md  trust.yaml
agents/marketing-judge/: README.md  brakes.md  cabinet.yaml  mandate.md  soul.md  trust.yaml
agents/research-synthesis/: README.md  brakes.md  cabinet.yaml  mandate.md  soul.md  trust.yaml
agents/short-video-ideator/: README.md  brakes.md  cabinet.yaml  mandate.md  soul.md  trust.yaml
agents/social-adapter/: README.md  brakes.md  cabinet.yaml  (+3 more)
docs/: AGENT-VS-WORKFLOW.md  DEEP-AGENT-SELF-IMPROVEMENT.md  EVOLVE-LOOP.md  INTRO-ARMATURE-AGENTS.md  armature-cabinet.md  writing-a-cabinet-agent.md
examples/: workflow.yml
tests/: test_compile.py  test_compile_comms.py  test_e2e.py  test_evolve_cli.py  test_evolve_compile_meta.py  test_evolve_cycle_history.py  test_evolve_gate.py  test_evolve_integration.py  test_evolve_lora.py  test_evolve_patch_applier.py  test_evolve_proposer.py  test_evolve_router.py  test_evolve_trace_reader.py  test_evolve_verifier.py  test_evolve_versioning.py  test_library.py  test_scaffold.py  test_select.py  test_team.py  test_validate.py  test_wizard_cli.py
(+103 files in other folders)
